--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Git Test Website</title>
   </head>
   <body>
-    <h1>Git Test</h1>
-    <p>Learning to use Git</p>
+    <h1>Better Git Test</h1>
+    <p>Learning to use Git like a champ</p>
   </body>
 </html>
