even better wording

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Git Test Website</title>
+    <title>Better Git Test</title>
   </head>
   <body>
     <h1>Better Git Test</h1>
